--- a/fictionSprint/index.html
+++ b/fictionSprint/index.html
@@ -26,7 +26,7 @@
 
     <body>
         <header>
-            <h1><b>Jabari</b></h1>
+            <h1><b>My Boi Jabari</b></h1>
             <h1>
                 <p>Stoner lover boy</p>
             </h1>
